# axum_example

./: .env  .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: app_state.rs  lib.rs  main.rs  router.rs
api/src/post/: handlers.rs
config/: default.toml  development.toml  production.toml  test.toml
documentation/: tasks.md
domain/: Cargo.toml
domain/src/: lib.rs  repository.rs
domain/src/post/: model.rs  repository.rs  service.rs
domain/src/post/tests/: db_mocks.rs  repository_tests.rs  service_tests.rs
entity/: Cargo.toml
entity/src/: mod.rs  posts.rs  prelude.rs
migration/: Cargo.toml
migration/src/: m20220120_000001_create_post_table.rs
service/: Cargo.toml
service/src/: lib.rs  mutation.rs  query.rs
service/src/post/: repository.rs
service/src/post/tests/: repository_tests.rs
service/tests/: mock.rs  prepare.rs
src/: config.rs  main.rs
web/: Cargo.toml
web/src/: app_state.rs  lib.rs  main.rs  server.rs
web/src/post/: handlers.rs  mod.rs  router.rs
web/src/post/templates/: edit.html.tera  index.html.tera  new.html.tera
web/src/post/tests/: handlers_tests.rs
web/templates/post/: edit.html.tera  index.html.tera  new.html.tera
