[package]
name = "sea-orm-axum-example"
version = "0.1.0"
authors = ["Yoshiera Huang <huangjasper@126.com>"]
edition = "2021"
publish = false

[workspace]
members = [".", "web", "domain", "entity", "migration"]

[dependencies]
dotenvy = "0.15.7"
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }
web = { path = "web" }
domain = { path = "domain" }
