[package]
name = "myapp"
version = "0.1.0"
authors = ["John Davenport <johns10@gmail.com>"]
edition = "2021"
publish = false

[workspace]
members = [".", "web", "domain", "entity", "migration"]

[dependencies]
anyhow = "1.0.75"
config = "0.14.0"
dotenvy = "0.15.7"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
web = { path = "web" }
domain = { path = "domain" }

[dev-dependencies]
mockall = "0.13.0"
