[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = "1.0.193"
entity = { path = "../entity" }
migration = { path = "../migration" }
async-trait = "0.1.82"
mockall = "0.13.0"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.63"

[dependencies.sea-orm]
version = "~1.0.1" # sea-orm version
features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres"]

[dev-dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
sea-orm = { version = "~1.0.1", features = ["mock"] }

[features]
mock = ["sea-orm/mock"]

[lib]
name = "domain"
path = "src/lib.rs"

[[test]]
name = "service_tests"
path = "src/post/tests/service_tests.rs"
