[package]
name = "axum-example-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "~1.0.1" # sea-orm version
features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres"]

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt"] }
sea-orm = { version = "~1.0.1", features = ["mock"] }

[features]
mock = ["sea-orm/mock"]

[lib]
name = "axum_example_service"
path = "src/lib.rs"