[package]
name = "web"
version = "0.1.0"
authors = ["Yoshiera Huang <huangjasper@126.com>"]
edition = "2021"
publish = false

[dependencies]
domain = { path = "../domain" }
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.7.1"
tower = { version = "0.5.0", features = ["util"]}
tower-http = { version = "0.5.0", features = ["fs"] }
tower-cookies = "0.10.0"
anyhow = "1.0.75"
serde = "1.0.193"
serde_json = "1.0.108"
tera = "1.19.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
migration = { path = "../migration" }

[dev-dependencies]
mockall = "0.13.0"
